Version 0.4 - UNRELEASED
 * use multiple processes for some toolpath strategies
  * this requires at least Python 2.6 or the "python-multiprocessing" package
 * added an improved contour toolpath strategy (ContourFollow)
  * see http://fab.senselab.org/node/43
 * added options for conventional/climb milling
 * added automatic support grid distribution for contour models
 * allow to reverse the direction of a 2D contour model
 * beautification of the process name (via python-setproctitle)
 * added experimental cluster processing (server mode)
 * added G61/64 GCode settings for path precision
 * Usability:
  * added optional "orthogonal" view (instead of perspective)
  * added a "recent files" item to the file menu
  * added the transparency (alpha) component to all configurable colors
  * added "remaining time" estimation for all operations
  * pre-select output filenames of "Save as" dialogs based on the name of the model file
 * Bugs fixed:
  * SVG import: work around a bug in pstoedit (shipped with Ubuntu Lucid)
  * fixed various problems with the support grid

Version 0.3 - 2010-08-16
 * added support for importing contour paths from SVG files (requires Inkscape and pstoedit)
 * added basic support for importing simple DXF contour files
 * added support for engravings (along the lines of a contour model)
 * added a feature-complete commandline interface
 * integrated "help" links pointing to the wiki
 * improved OpenGL lighting (contributed by imyrek)
 * improved flexibility of the support grid layout:
  * allow non-square profiles for the support grid
  * added ability to create support grids with different x/y grid distance
  * added x/y offsets to support grid options
 * added 3D view movement and rotation with a keyboard in addition to the mouse
 * added optional support for the Psyco just-in-time compiler
 * information about the toolpath settings are stored as comments in GCode files
 * added a log window